[gd_scene load_steps=7 format=3 uid="uid://dsw06ucuyw2xh"]

[ext_resource type="Script" path="res://game_clear.gd" id="1_emw4q"]
[ext_resource type="Script" path="res://Control.gd" id="2_06655"]
[ext_resource type="FontFile" uid="uid://dewb8w3jpive4" path="res://font/Stamp Amy PK V Two.otf" id="2_nus2l"]
[ext_resource type="AudioStream" uid="uid://lnxw4w83vai7" path="res://se/BGM.mp3" id="3_437wb"]
[ext_resource type="PackedScene" uid="uid://ctybjy284tuun" path="res://Effect.tscn" id="3_muu1v"]
[ext_resource type="AudioStream" uid="uid://ck63vd7d8pf3y" path="res://se/SelectSE.mp3" id="5_yjwjo"]

[node name="GameClear" type="Node2D" node_paths=PackedStringArray("restartBtn", "text")]
script = ExtResource("1_emw4q")
restartBtn = NodePath("Control/Panel/RestartButton")
text = NodePath("Control/Panel/Label")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1150.0
offset_bottom = 648.0

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 646.0
script = ExtResource("2_06655")

[node name="Node2D" parent="Control/Panel" instance=ExtResource("3_muu1v")]
position = Vector2(200, 311)
scale = Vector2(1.22909, 1.39263)

[node name="Node2D2" parent="Control/Panel" instance=ExtResource("3_muu1v")]
position = Vector2(956, 407)

[node name="BackToTitleButton" type="Button" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -201.5
offset_top = 74.5
offset_right = 198.5
offset_bottom = 151.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_nus2l")
theme_override_font_sizes/font_size = 50
text = "BackToTitle
"

[node name="RestartButton" type="Button" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -201.5
offset_top = -37.5
offset_right = 198.5
offset_bottom = 39.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_nus2l")
theme_override_font_sizes/font_size = 50
text = "NextStage"

[node name="Label" type="Label" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -293.0
offset_right = 293.0
offset_bottom = 282.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_nus2l")
theme_override_font_sizes/font_size = 80
text = "StagClear
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_437wb")
autoplay = true

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_yjwjo")
autoplay = true

[connection signal="pressed" from="Control/Panel/BackToTitleButton" to="." method="_on_back_to_title_button_pressed"]
[connection signal="pressed" from="Control/Panel/RestartButton" to="." method="_on_restart_button_pressed"]
